css/portfolio.css
.main-wrapper {
    background-color: var(--color-primary);
}

.portfolio-section {
    background-color: var(--color-primary);
  }
  
.portfolio-icon {
    width: 320px;
    height: auto;
    display: block;
    margin: 0 auto;
}
  
  /* Transparent button with black border + slight overlap */
.clear-btn {
    position: relative;
    font-family: var(--font-h3);
    font-size: var(--font-size-h3);
    font-weight: var(--font-weight-bold);
    color: var(--color-secondary);
    background-color: transparent;
    border: 2px solid var(--color-secondary);
    border-radius: 25px;
    padding: 0.5rem 1.5rem;
    transition: all 0.3s ease;
    display: inline-block;
    margin-top: -55px;
}
  
.clear-btn:hover {
    background-color: var(--color-secondary);
    color: var(--color-accent);
}

@media (min-width: 834px) {
    .portfolio-icon {
        width: 500px;
        height: auto;
        display: block;
        margin: 0 auto;
    }

    .clear-btn {
       font-size: var(--font-size-h2);
       width: 200px;
       height: auto;
       margin-top: -80px;
    }
}

@media (min-width: 1555px) {
    .main-wrapper {
      display: flex;
      justify-content: center;
    }
  
    .portfolio-section {
      flex-direction: row !important;
      display: flex;
      justify-content: center;
      gap: var(--spacing-large);
      width: 100%;
      max-width: 1200px;
      height: 85vh;
    }
  
    .portfolio-item {
      flex: 1;
      display: flex;
      flex-direction: column;
      align-items: center;
    }
  
    .portfolio-icon {
      width: 450px;
      height: auto;
    }
  
    .clear-btn {
      width: 300px;
      font-size: 3rem;
      padding: 0.5rem 2rem;
      margin-top: -40px;
    }
}

